--- a/index.html
+++ b/index.html
@@ -140,13 +140,196 @@
     </div> <!-- end of container-->
   </section><!-- end of page -->
   <section class="latest">
-    <h2>Latest Reviews</h2>
+    <h2 class="home_header">Most Recent Uploads</h2>
+
+    <div class="container"> <!-- Add margins to sides -->
+      <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in one">
+            <!-- Thumbnail picture -->
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+            <!-- Title -->
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <!-- Small decription -->
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <!-- expand card -->
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div> <!-- end of reveal -->
+        </div> <!-- End of card -->
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in two">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in three">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in four">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+      </div> <!-- end of wrapper -->
+    </div> <!-- end of container-->
   </section>
   <section class="eariler">
-    <h2>Eariler Reviews</h2>
+    <h2 class="home_header">Most Recent Uploads</h2>
+
+    <div class="container"> <!-- Add margins to sides -->
+      <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in one">
+            <!-- Thumbnail picture -->
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+            <!-- Title -->
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <!-- Small decription -->
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <!-- expand card -->
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div> <!-- end of reveal -->
+        </div> <!-- End of card -->
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in two">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in three">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in four">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+      </div> <!-- end of wrapper -->
+    </div> <!-- end of container-->
   </section>
   <section class="older">
-    <h2>Older Reviews</h2>
+    <h2 class="home_header">Most Recent Uploads</h2>
+
+    <div class="container"> <!-- Add margins to sides -->
+      <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in one">
+            <!-- Thumbnail picture -->
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+            <!-- Title -->
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <!-- Small decription -->
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <!-- expand card -->
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div> <!-- end of reveal -->
+        </div> <!-- End of card -->
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in two">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in three">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+
+        <!-- Card -->
+        <div class="card small hvr-float fade-in four">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+      </div> <!-- end of wrapper -->
+    </div> <!-- end of container-->
   </section>
 </div>
 <a class="toggle" href="#"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
